Update acf test.

--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,2 @@
-#Folders Ignore
-Bin/
-
-#cmake ignore
-CMakeCache.txt
-CMakeFiles/
-CMakeScripts/
-Makefile/
-*/test/*
-!*/test/*.c
-cmake_install.cmake
-install_manifest.txt
-CTestTestfile.cmake
-Makefile
-
-#yml
-*.yml
-
-#Compiled
-*.a
-*.o
-*.lib
-*.so
-*.exe
-*.dll
-
-#Eclipse
-.project
-.cproject
-language.settings.xml
-
-#tcl
-*.tcl
-
-#stackdump
-*.stackdump
-
-*.exe
 build/
-API-doc
-
-#data
-*.bin
-
-#vscode
-*.vscode
-API-doc/
+doc/book/*
