Pure Fortran binding.

--- a/fpm.toml
+++ b/fpm.toml
@@ -1,15 +1,18 @@
 name = 'fortsa'
-version = '0.0.1'
+version = '0.0.3'
 maintainer = 'fortsa contributors'
-license = 'BSD 3- Clause Check LINCENSE file'
-author = 'fortsa contributors'
+license = 'BSD 3- Clause'
+author = '左志华'
 categories = 'time series analysis'
-copyright = "2014-2021 fortsa contributors"
+copyright = "2021 fortsa contributors"
 
 [build]
 auto-examples = false
 auto-executables = false
 auto-tests = false
+
+[dependencies]
+ctsa = { git="https://github.com/zoziha/ctsa", branch="ctsa-fpm" }
 
 [dev-dependencies]
 ## `stdlib` inside `forlab` dependencies
