--- a/.github/workflows/fpm.yml
+++ b/.github/workflows/fpm.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Install fpm
       uses: fortran-lang/setup-fpm@v3
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        fpm-version: 'v0.4.0'
 
     - name: Build & Test
       run: |
