--- a/fpm.toml
+++ b/fpm.toml
@@ -16,7 +16,7 @@ ctsa = { git="https://github.com/zoziha/ctsa", branch="ctsa-fpm" }
 
 [dev-dependencies]
 ## `stdlib` inside `forlab` dependencies
-forlab = { git = "https://github.com/fortran-fans/forlab", branch = "forlab-fpm" }
+forlab = { git = "https://github.com/zoziha/forlab" }
 test-drive = { git="https://github.com/fortran-lang/test-drive" }
 
 [library]
@@ -25,53 +25,22 @@ source-dir="src"
 # ============================ tests ===========================================
 ## [dwt] tests
 [[test]]
-name="dwt_dwt"
-source-dir="tests/dwt"
+name="dwt"
+source-dir="test/dwt"
 main="test_dwt_dwt.f90"
+
 ## [model] tests
 [[test]]
-name="model_ar"
-source-dir="tests/model"
-main="test_model_ar.f90"
-[[test]]
-name="model_ar2"
-source-dir="tests/model"
-main="test_model_ar2.f90"
-[[test]]
-name="model_arima"
-source-dir="tests/model"
-main="test_model_arima.f90"
-[[test]]
 name="model"
-source-dir="tests/model"
+source-dir="test/model"
 main="checker.f90"
 [[test]]
-name="model_autoarima3"
-source-dir="tests/model"
-main="test_model_autoarima3.f90"
-# [[test]]
-# name="model_misc"
-# source-dir="tests/model"
-# main="test_model_misc.f90"
-[[test]]
-name="model_sarima"
-source-dir="tests/model"
-main="test_model_sarima.f90"
-[[test]]
-name="model_sarimax"
-source-dir="tests/model"
-main="test_model_sarimax.f90"
-[[test]]
-name="model_sarimax2"
-source-dir="tests/model"
-main="test_model_sarimax2.f90"
-[[test]]
-name="model_sarimax3"
-source-dir="tests/model"
-main="test_model_sarimax3.f90"
+name="model_arima"
+source-dir="test/model"
+main="test_model_arima.f90"
 
 ## [stats] tests
 [[test]]
 name="stats"
-source-dir="tests/stats"
+source-dir="test/stats"
 main="checker.f90"
