--- a/fpm.toml
+++ b/fpm.toml
@@ -22,10 +22,10 @@ source-dir="src"
 
 # ============================ tests ===========================================
 ## [dwt] tests
-# [[test]]
-# name="dwt"
-# source-dir="test/dwt"
-# main="test_dwt_dwt.f90"
+[[test]]
+name="dwt"
+source-dir="test/dwt"
+main="checker.f90"
 
 # ## [model] tests
 # [[test]]
